--- a/netflix-api/.env
+++ b/netflix-api/.env
@@ -1,2 +1,2 @@
 #DB_URI=mongodb+srv://jaidugal:pYtty0-wyqryx-bicsyg@Cluster0.ovblyua.mongodb.net/UserData
-DB_URI=mongodb+srv://Lekhi:password@Cluster0.hdmkqiu.mongodb.net/UserData
+DB_URI=mongodb+srv://Chan:password@Cluster1.hdmkqiu.mongodb.net/UserData
